// =============================================================
// MODULE 3: ENTERPRISE & RECRUITMENT
// Covers: UC-31 → UC-41  |  BR-29 → BR-37
// dbdiagram.io (DBML)
// =============================================================

Table enterprises {
  enterprise_id UUID [PK, DEFAULT: `gen_random_uuid()`]
  company_name VARCHAR(500) [NOT NULL]
  tax_code VARCHAR(50)
  industry VARCHAR(255)
  company_size VARCHAR(50)
  description TEXT
  address TEXT
  logo_url VARCHAR(1000)
  contact_person_name VARCHAR(255)
  contact_person_email VARCHAR(255)
  contact_person_phone VARCHAR(20)
  approval_status VARCHAR(20) [DEFAULT: 'PENDING']
  rejection_reason TEXT
  approved_by UUID
  approved_at TIMESTAMP
  created_at TIMESTAMP [DEFAULT: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [DEFAULT: `CURRENT_TIMESTAMP`]
  deleted_at TIMESTAMP
  website VARCHAR(255)

  Note: 'BR-15 rejection_reason mandatory when REJECTED'
}

Table job_posts {
  job_post_id UUID [PK, DEFAULT: `gen_random_uuid()`]
  enterprise_id UUID [NOT NULL]
  semester_id UUID [NOT NULL]
  title VARCHAR(500) [NOT NULL]
  description TEXT [NOT NULL]
  requirements TEXT
  benefits TEXT
  required_technologies TEXT
  max_positions INT [DEFAULT: 1]
  original_max_positions INT
  application_deadline DATE
  status VARCHAR(20) [DEFAULT: 'OPEN']
  created_at TIMESTAMP [DEFAULT: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [DEFAULT: `CURRENT_TIMESTAMP`]
  deleted_at TIMESTAMP
  created_by UUID

  Note: '''
  BR-29 post ownership
  BR-30 status OPEN|CLOSED
  '''
}

Table applications {
  application_id UUID [PK, DEFAULT: `gen_random_uuid()`]
  job_post_id UUID [NOT NULL]
  student_id UUID [NOT NULL]
  cv_file_url VARCHAR(1000) [NOT NULL]
  cv_snapshot_url VARCHAR(1000)
  cv_download_count INT [DEFAULT: 0]
  status VARCHAR(30) [DEFAULT: 'PENDING']
  screening_note TEXT
  screened_by UUID
  screened_at TIMESTAMP
  withdrawn_at TIMESTAMP
  withdrawn_by_application_id UUID
  previous_status VARCHAR(30)
  created_at TIMESTAMP [DEFAULT: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [DEFAULT: `CURRENT_TIMESTAMP`]
  deleted_at TIMESTAMP

  Note: '''
  BR-31 PDF only
  BR-46 unique (job, student) for ACTIVE
  BR-54 SV ky 5-6 moi duoc apply
  '''
}

Table placement_applications {
  application_id UUID [PK, DEFAULT: `gen_random_uuid()`]
  student_id UUID [NOT NULL]
  enterprise_id UUID [NOT NULL]
  semester_id UUID [NOT NULL]
  status VARCHAR(20) [DEFAULT: 'PENDING_APPROVAL']
  cover_letter TEXT
  reviewed_by UUID
  reviewed_at TIMESTAMP
  rejection_reason TEXT
  created_at TIMESTAMP [DEFAULT: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [DEFAULT: `CURRENT_TIMESTAMP`]
  created_by UUID
  updated_by UUID
  is_replacement BOOLEAN [DEFAULT: FALSE]
  replaces_application_id UUID

  Note: '''
  Workflow: PENDING_APPROVAL -> APPROVED | REJECTED | WITHDRAWN
  Rejection reason >= 5 chars when REJECTED
  is_replacement for self-replace workflow
  '''
}

Table interviews {
  interview_id UUID [PK, DEFAULT: `gen_random_uuid()`]
  application_id UUID [NOT NULL]
  scheduled_datetime TIMESTAMP [NOT NULL]
  duration_minutes INT [DEFAULT: 30]
  location VARCHAR(500)
  meeting_link VARCHAR(1000)
  cancel_reason TEXT
  canceled_at TIMESTAMP
  reschedule_reason TEXT
  status VARCHAR(20) [DEFAULT: 'SCHEDULED']
  student_confirmed BOOLEAN [DEFAULT: FALSE]
  confirmed_at TIMESTAMP
  student_decline_reason TEXT
  result VARCHAR(10)
  result_note TEXT
  decided_by UUID
  decided_at TIMESTAMP
  is_backdated BOOLEAN [DEFAULT: FALSE]
  backdated_at TIMESTAMP
  backdated_by UUID
  backdated_reason TEXT
  created_at TIMESTAMP [DEFAULT: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [DEFAULT: `CURRENT_TIMESTAMP`]

  Note: '''
  BR-35 must be future
  BR-37 result PASS|FAIL only after COMPLETED
  BR-49 student_confirmed irreversible
  '''
}


// =============================================================
// RELATIONSHIPS
// =============================================================

// --- Internal 03 (cac bang deu nam trong file 03) ---
Ref: job_posts.enterprise_id > enterprises.enterprise_id
Ref: applications.job_post_id > job_posts.job_post_id
Ref: applications.withdrawn_by_application_id > applications.application_id
Ref: placement_applications.enterprise_id > enterprises.enterprise_id
Ref: placement_applications.replaces_application_id > placement_applications.application_id
Ref: interviews.application_id > applications.application_id

// --- Cross-module Refs (bang users/semesters/... nam o file khac) ---
//  Xem 00_overview.dbml cho cac Ref nay:
//  enterprises.approved_by            -> users.user_id
//  job_posts.semester_id             -> semesters.semester_id
//  job_posts.created_by               -> users.user_id
//  applications.student_id            -> users.user_id
//  applications.screened_by           -> users.user_id
//  placement_applications.student_id  -> users.user_id
//  placement_applications.semester_id -> semesters.semester_id
//  placement_applications.reviewed_by -> users.user_id
//  placement_applications.created_by  -> users.user_id
//  placement_applications.updated_by  -> users.user_id
//  interviews.decided_by              -> users.user_id
//  interviews.backdated_by            -> users.user_id